@@ -69,6 +69,7 @@ PHP                                                                        NEWS
 - Posix:
   . Added posix_sysconf. (David Carlier)
   . Added posix_pathconf. (David Carlier)
+  . Added posix_fpathconf. (David Carlier)
 
 - Random:
   . Added Randomizer::getBytesFromString(). (Joshua Rüsweg)
